fixed ul/ol spacings

--- a/src/themes/elegant/scss/base/typography.scss
+++ b/src/themes/elegant/scss/base/typography.scss
@@ -209,8 +209,8 @@ h6,
   margin-top: $spacing-huge;
 }
 
-ul {
-  list-style-type: disc;
+ul,
+ol {
   margin-top: 0;
   padding-left: $spacing-large;
 
@@ -218,6 +218,10 @@ ul {
   li:first-child {
     margin-top: $spacing !important; // sass-lint:disable-line no-important
   }
+}
+
+ul {
+  list-style-type: disc;
 }
 
 b,
@@ -246,7 +250,6 @@ dl {
     margin-top: $spacing-small;
   }
 }
-
 
 .minor {
   opacity: .5;
